--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,3 +32,7 @@ body {
   color: var(--foreground);
   font-family: "Mulmaru", Arial, Helvetica, sans-serif;
 }
+
+main {
+  background-image: url("../../public/assets/backgrounds/main-bg.png");
+}
