--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,7 +56,7 @@ button.pixel-ui {
   letter-spacing: 1px;
   /* background-color: #6abc3a; */
   padding: 15px 40px 15px 40px;
-  font-size: 14px;
+  /* font-size: 14px; */
   border: 0;
   box-shadow:
     0px 5px black,
